# Projects

./: AnimationMapper.Java  README.md  ntickets.R
Bastion/backend/: .env  package.json  signalServer.py  tsconfig.json
Bastion/backend/prisma/: schema.prisma
Bastion/backend/src/controllers/: userController.ts
Bastion/backend/src/devices/: devices.controller.ts
Bastion/backend/src/gateways/: messaging.gateway.ts
Bastion/backend/src/models/: karyTree.ts
Bastion/backend/src/services/: badgeService.ts
Bastion/comms/: pubspec.yaml
Bastion/comms/ios/Runner/: Info.plist
Bastion/comms/ios/Runner.xcodeproj/: project.pbxproj
Bastion/comms/lib/: main.dart  themes.dart
Bastion/comms/lib/models/: karyTree.dart  messages.dart  treeManager.dart
Bastion/comms/lib/pages/: accountCreation.dart  (+9 more)
Bastion/comms/test/: widget_test.dart
DOSActual/Broker/: Makefile  broker.proto  broker.py  broker_pb2.py  broker_pb2_grpc.py  client.py  server.py
DOSActual/Client-Server/: Makefile  graph.proto  graph_pb2.py  graph_pb2_grpc.py  graphclient.py  graphserver.py  input1.txt
DOSActual/MultiC/: graph.proto  graph_pb2.py  graph_pb2_grpc.py  graphclient.py  graphserver.py  input.txt  input1.txt  input2.txt
DOSActual/MultiServer/: broker.py  client.py  input.txt  server.py
DOSActual/Program/: Makefile  input2.txt  program1.py  test_graph.py
DOSActual/Threading/: Makefile  test_threadedGraph.py  threaded.py
Messaging/: CMakeLists.txt
Messaging/back/: CMakeLists.txt  crypto.cpp  main.cpp
Messaging/back/headers/: crypto.hpp
SetOps/: input1.txt  input2.txt  p4  project4.cpp
(+8 files in other folders)
